k8s/envoy-gateway-system/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: "100.110.121.73"
    - type: IPAddress
      value: "fd7a:115c:a1e0::6601:794f"
  listeners:
    - name: https
      hostname: "*.neffi.fr"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: "neffi-fr-tls"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: "192.168.1.42"
  listeners:
    - name: https
      hostname: "*.neffi.fr"
      protocol: HTTPS
      port: 4443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: "neffi-fr-tls"
